@@ -1,3 +1,8 @@
+2009-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* port/libport.h: Add extern declarations for getopt standard
+	globals.
+
 2009-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* libtiff/tif_lzw.c (LZWDecode, LZWDecodeCompat): Fix warnings
